@@ -40,13 +40,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install wheel
-        python -m pip install --upgrade --upgrade-strategy eager numpy scipy h5py cython pandas xlrd flake8 pytest ipywidgets IPython matplotlib traitlets pyqt5==5.15.2 uncertainties attrs corner tqdm periodictable pyopencl pymc3 pytest-qt
+        python -m pip install numpy scipy oldest-supported-numpy h5py cython pandas xlrd flake8 pytest ipywidgets IPython matplotlib traitlets pyqt5==5.15.2 uncertainties attrs corner tqdm periodictable pyopencl pymc3 pytest-qt
 
     - name: Test with pytest
       env:
         MPLBACKEND: agg
       run: |
-        python -m pip install -e .
+        python setup.py build_ext --inplace
+        # python -m pip install -e .
         python -m pip install pytest
         # uses xvfb for GUI part of the test
         xvfb-run pytest
@@ -90,7 +91,7 @@ jobs:
     strategy:
       max-parallel: 3
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -119,7 +120,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install wheel
-        python -m pip install --upgrade --upgrade-strategy eager numpy scipy h5py cython pandas xlrd pytest ipywidgets IPython matplotlib traitlets pyqt5 uncertainties attrs corner tqdm periodictable delocate pyopencl
+        python -m pip install --upgrade --upgrade-strategy eager numpy scipy oldest-supported-numpy h5py cython pandas xlrd pytest ipywidgets IPython matplotlib traitlets pyqt5 uncertainties attrs corner tqdm periodictable delocate pyopencl
         #        python -m pip install git+https://github.com/pymc-devs/pymc3
 
     - name: Make wheel
@@ -180,7 +181,7 @@ jobs:
     strategy:
       max-parallel: 3
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -206,7 +207,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install wheel
 
-        python -m pip install --upgrade --upgrade-strategy eager numpy scipy h5py cython pandas xlrd pytest ipywidgets IPython matplotlib traitlets pyqt5 uncertainties corner tqdm periodictable
+        python -m pip install --upgrade --upgrade-strategy eager numpy scipy oldest-supported-numpy h5py cython pandas xlrd pytest ipywidgets IPython matplotlib traitlets pyqt5 uncertainties corner tqdm periodictable
         #        python -m pip install git+https://github.com/pymc-devs/pymc3
 
         #        python -m pip install pytools mako cffi
